--- a/BoardCard_3cao/css/styled.scss
+++ b/BoardCard_3cao/css/styled.scss
@@ -11,25 +11,33 @@
 body {
     padding: 20px;
     padding-top: 60px;
-    max-width: 640px;
-    margin: 0 auto;
+    width: 100%;
+    font-size: 16px;
+}
+
+%box {
+    color: #fff;
+    background-color: #00bfff;
+    border-radius: 6px;
+    padding: 4px 10px;
+    display: inline-block;
+    line-height: 1;
 }
 
 .timer {
+    width: 50px;
+    height: 50px;
     position: fixed;
-    width: 60px;
     font-weight: 700;
     font-size: 30px;
     z-index: 1000;
-    top: 10px;
+    top: 0;
     left: 50%;
-    color: #00bfff;
-    border-bottom: 1px solid #00bfff;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
     transform: translateX(-50%);
+    @extend %box;
 
     @media only screen and (max-width: 640px) {
         width: 40px;
@@ -41,61 +49,79 @@ body {
 }
 
 .boardcard {
+    width: 100%;
+    max-width: calc(50% - 15px);
 
     .comp-card,
     .card {
         width: 100%;
-        min-height: 60px;
+        min-height: 200px;
         display: flex;
         justify-content: center;
-        margin-top: 40px;
         position: relative;
         overflow: hidden;
-        border-bottom: 2px solid #aaa;
+        border: 1px solid #d6d6d6;
 
         &::before {
             position: absolute;
-            z-index: 100;
-            top: 0;
+            z-index: 0;
+            top: 50%;
             left: 0;
-            font-size: 24px;
-            font-weight: 700;
-            color: #00bfff;
-            padding: 0 6px;
-            border-radius: 6px;
-            background-color: #fff;
+            font-size: 5vw;
+            opacity: 0.15;
         }
 
         &::after {
-            content: 'lose';
-            width: 250px;
+            width: 100%;
             max-width: 100%;
-            background-color: transparent;
             color: #fff;
-            position: absolute;
-            font-size: 20px;
-            line-height: 1;
-            top: 50%;
-            left: 50%;
             text-align: center;
-            transform: translate(-50%, -50%) scale(0, 1);
+            position: absolute;
+            font-size: 16px;
+            line-height: 0.875;
+            bottom: 0;
+            right: 0;
+
+            transform: scale(0, 1);
             transition: all 0.5s ease;
         }
 
         &.lose {
+            border-color: #dc3545;
+
             &::after {
-                transform: translate(-50%, -50%) scale(1, 1);
-                background-color: rgba(0, 0, 0, 0.4);
+                content: 'Lose';
+                transform: scale(1, 1);
+                background-color: #dc3545;
+            }
+        }
+
+        &.win {
+            border-color: #00bfff;
+
+            &::after {
+                content: 'Win';
+                transform: scale(1, 1);
+                background-color: #00bfff;
+            }
+        }
+
+        &.eqa {
+            border-color: #ffc107;
+
+            &::after {
+                content: 'Equal';
+                transform: scale(1, 1);
+                background-color: #ffc107;
             }
         }
 
         >.card__item {
-            width: 60px;
-            height: 60px;
+            width: 120px;
+            height: 200px;
             background-color: #fff;
-            border: 2px solid #aaa;
-            border-bottom: 0;
-            border-radius: 4px 4px 0 0;
+            border-radius: 6px;
+            border: 1px solid #333;
             margin: 0 4px;
             position: relative;
             display: flex;
@@ -104,29 +130,24 @@ body {
             transform: translateY(100%);
             animation: kf_card_up 0.5s ease 0s 1 both;
 
-            &.active {
-                border-width: 3px;
-                border-color: #00bfff;
-            }
-
             &::before {
                 content: attr(data-content);
                 color: inherit;
-                font-size: 30px;
-                font-weight: 600;
+                font-size: 6vw;
                 line-height: 1;
             }
 
             &::after {
                 position: absolute;
                 top: 0;
-                right: 4px;
+                right: 6px;
                 color: inherit;
-                font-size: 18px;
+                font-size: 3vw;
             }
 
             &.hearts {
                 color: red;
+                border-color: #dc3545;
 
                 &::after {
                     content: "♥";
@@ -135,6 +156,7 @@ body {
 
             &.diamonds {
                 color: red;
+                border-color: #dc3545;
 
                 &::after {
                     content: "♦";
@@ -161,13 +183,13 @@ body {
 
     .comp-card {
         &::before {
-            content: "Nhà cái";
+            content: "COMPUTER";
         }
     }
 
     .card {
         &::before {
-            content: "Nhà con";
+            content: "PLAYER";
         }
     }
 
@@ -203,15 +225,10 @@ body {
 .noti {
     position: fixed;
     left: 50%;
-    top: 100px;
-    background-color: #00bfff;
-    padding: 4px 10px;
-    border-radius: 8px;
+    top: 0;
+    @extend %box;
+    background-color: #dc3545;
     transform: translate(-50%, 0);
-    max-width: 100%;
-    min-width: 200px;
-    text-align: center;
-    color: #fff;
     animation: kf_noti 1s ease 0s 1 both;
 
     &.not-enought {
@@ -243,7 +260,7 @@ body {
 
     0%,
     20% {
-        top: 100px;
+        top: 25vh;
     }
 
     40% {
@@ -258,17 +275,14 @@ body {
 
 .total-coin {
     font-size: 24px;
-    color: #00bfff;
-    border-bottom: 1px solid #00bfff;
     display: inline-block;
-    padding: 0px 10px;
     line-height: 1;
     font-weight: 600;
+    @extend %box;
 
     &::before,
     &::after {
-        color: #aaa;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     &::before {
@@ -283,50 +297,31 @@ body {
 
 .add-coin {
     position: fixed;
-    width: 70px;
-    height: 40px;
     top: 5px;
     right: 5px;
-    border: 1px solid #00bfff;
-    background-color: #fff;
-    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    color: #00bfff;
-    font-size: 22px;
+    font-size: 18px;
+    @extend %box;
 
     &::before {
         content: "Nạp";
-        font-size: 18px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-    }
-
-    &:hover,
-    &.active {
-        &::before {
-            position: static;
-            transform: translate(0%, 0%);
-            margin-right: 4px;
-        }
+        margin-right: 6px;
     }
 }
 
-
 .let-set-coin {
+    position: fixed;
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 180px;
     text-align: center;
-    font-size: 20px;
-    color: #00bfff;
     font-weight: 700;
-    margin-top: 40px;
-    border: 1px solid #aaa;
-    padding: 4px;
-    border-radius: 6px;
+
+    @extend %box;
 
     &::before {
         content: 'hãy đặt tiền';
@@ -334,8 +329,7 @@ body {
 
     &.none {
         color: #fff;
-        background-color: red;
-
+        background-color: #dc3545;
 
         &::before {
             content: 'không được đặt';
@@ -344,17 +338,14 @@ body {
 }
 
 .set-coin {
-    text-align: center;
     font-size: 40px;
-    color: #00bfff;
-    line-height: 1.2;
     font-weight: 600;
     margin-top: 20px;
-    border-bottom: 1px solid #00bfff;
+    @extend %box;
+
 
     &::before,
     &::after {
-        color: #aaa;
         font-size: 14px;
     }
 
@@ -380,80 +371,69 @@ body {
 }
 
 .block {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    border: 1px solid #aaa;
+    width: 100%;
+    height: 50px;
+    max-width: calc(50% - 10px);
+    @extend %box;
+    line-height: 50px;
+    background-color: #aaa;
+    text-align: center;
     cursor: pointer;
-    color: #aaa;
+    vertical-align: middle;
 
     &::before {
         font-size: 30px;
-        font-weight: 700;
+        font-weight: 600;
     }
 
     &.block-comp {
         &::before {
-            content: 'Cái';
+            content: 'COMPUTER';
         }
     }
 
     &.block-con {
         &::before {
-            content: 'Con';
+            content: 'PLAYER';
         }
     }
 
     &.active {
         background-color: #00bfff;
-
-        &::before {
-            color: #fff;
-        }
     }
 }
 
 .button {
     width: 100%;
+    height: 40px;
     max-width: 100%;
     margin-top: 20px;
-    color: #aaa;
     font-size: 18px;
-    padding: 10px;
-    background-color: #fff;
+    @extend %box;
+    background-color: #aaa;
     cursor: pointer;
-    border: 1px solid #aaa;
-    border-radius: 8px;
     outline: 0;
     transition: all .3s ease;
 
     &:hover,
     &.active {
         background-color: #00bfff;
-        color: #fff;
-        border-color: #00bfff;
     }
 }
 
 .coin {
     width: calc((100% / 6) - 8px);
     height: 40px;
-    border: 1px solid #00bfff;
-    background-color: #00bfff;
-    border-radius: 4px;
+    @extend %box;
+    background-color: #aaa;
+    line-height: 40px;
     position: relative;
-    color: #fff;
     cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease;
 
     &::after {
-        position: absolute;
         color: inherit;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
 
     &.coin--10 {
@@ -493,8 +473,7 @@ body {
     }
 
     &:hover {
-        color: #00bfff;
-        background-color: #fff;
+        background-color: #00bfff;
     }
 
     @media only screen and (max-width: 640px) {
@@ -510,20 +489,19 @@ body {
     span {
         width: 20px;
         height: 20px;
-
-        border-radius: 99px;
-        margin: 3px;
+        border-radius: 4px;
+        margin: 4px;
 
         &.win {
-            background-color: green;
+            background-color: #28a745;
         }
 
         &.lose {
-            background-color: red;
+            background-color: #dc3545;
         }
 
         &.equal {
-            background-color: yellow;
+            background-color: #ffc107;
         }
     }
 }
