--- a/BoardCard_latbai/css/styled.scss
+++ b/BoardCard_latbai/css/styled.scss
@@ -9,10 +9,46 @@
 }
 
 body {
-    padding: 20px 4px;
+    padding: 20px;
+    background-color: #555;
+    color: #aaa;
 }
 
-$color:#00bfff;
+$color:#aaa;
+
+.mouse-effect-checkbox {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    border: 2px solid $color;
+    border-radius: 4px;
+    background-color: #aaa;
+    position: relative;
+    cursor: pointer;
+
+    &::after {
+        content: '';
+        width: 6px;
+        height: 12px;
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(45deg);
+        border-bottom: 4px solid #fff;
+        border-right: 4px solid #fff;
+        border-radius: 2px;
+        opacity: 0;
+    }
+
+    &.checked {
+        background-color: $color;
+
+        &::after {
+            opacity: 1;
+        }
+    }
+}
 
 input[type="number"] {
     width: 70px;
@@ -25,22 +61,29 @@ input[type="number"] {
     border-radius: 4px;
 }
 
-.start-with {
-    width: 150px;
-    height: 30px;
-    border-radius: 4px;
-    display: flex;
-    font-size: 12px;
+%box {
+    width: 120px;
+    height: 40px;
     color: #fff;
-    background-color: #00bfff;
-    border: 1px solid #00bfff;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    background-color: #aaa;
+    display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    transition: all 0.3s ease;
 
-    &::after {
-        content: 'start with';
+    &:hover,
+    &.active {
+        color: #aaa;
+        background-color: #fff;
     }
+}
+
+.start-with {
+    @extend %box;
+    margin-top: 40px;
+    cursor: pointer;
 }
 
 .current-level {
@@ -74,76 +117,34 @@ input[type="number"] {
     }
 }
 
-.gamescreen {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin-bottom: 4px;
-    position: relative;
-
-    >.span {
-        min-width: 130px;
-        font-size: 14px;
-        text-align: right;
-        padding-right: 30px;
-    }
-
-    .min-screen {
-        font-size: 12px;
-        color: red;
-        font-weight: 600;
-        position: absolute;
-        bottom: -30px;
-        left: 130px;
-    }
-}
-
 .paper {
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
-    border-radius: 4px;
     position: relative;
-    margin-top: 40px;
+    margin-top: 20px;
 
     >.paper__item {
-        width: 50px;
-        height: 50px;
-        background-color: gray;
-        border: 1px solid gray;
-        border-radius: 4px;
-        margin: 2px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        color: #333;
-        font-weight: 600;
+        width: 80px;
+        height: 80px;
+        @extend %box;
+        background-color: $color;
+        margin: 4px;
+        font-size: 40px;
         cursor: pointer;
-        transition: all 0.2s linear;
         position: relative;
-        color: #fff;
 
         &::after {
             content: attr(data-content);
             position: absolute;
-            font-size: 16px;
             font-weight: 600;
         }
 
-        &:hover {
-            background-color: #00bfff;
-        }
-
-        &.active {
-            cursor: not-allowed;
-            background-color: #00bfff;
-        }
-
+        &.active,
         &.is-open {
-            color: #00bfff;
-            background-color: #fff;
-            border-color: #00bfff;
+            cursor: not-allowed;
+            color: #fff;
+            background-color: #555;
         }
     }
 }
@@ -151,31 +152,16 @@ input[type="number"] {
 .game-mode {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 
     >.mode {
-        width: calc(33% - 4px);
-        height: 40px;
-        border-radius: 4px;
-        border: 2px solid #00bfff;
-        color: #00bfff;
-        background-color: #fff;
-        margin-top: 4px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %box;
+        max-width: 32%;
+        margin: 4px;
         cursor: pointer;
-        transition: all 0.4s ease;
 
         &::after {
             font-size: 14px;
             font-weight: 500;
-        }
-
-        &.none {
-            &::after {
-                content: 'null';
-            }
         }
 
         &.easy {
@@ -206,12 +192,6 @@ input[type="number"] {
             &::after {
                 content: 'hell';
             }
-        }
-
-        &:hover,
-        &.active {
-            color: #fff;
-            background-color: #00bfff;
         }
     }
 }
@@ -261,5 +241,29 @@ input[type="number"] {
     100% {
         opacity: 0;
         transform: translate(-50%, -50%) scale(2.5, 2.5);
+    }
+}
+
+.circle-hover,
+.circle-hover-effect {
+    width: 20px;
+    height: 20px;
+    background-color: $color;
+    border-radius: 99px;
+    position: fixed;
+    z-index: 1000;
+    display: block;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.circle-hover-effect {
+    animation: kf_fall_down_effect duration timing-function delay iteration-count direction fill-mode;
+}
+
+@keyframes kf_fall_down_effect {
+    to {
+        transform: translateY(100px);
     }
 }
