--- a/assets/plugins/anijs/_par/_wave.scss
+++ b/assets/plugins/anijs/_par/_wave.scss
@@ -1,30 +1,23 @@
 .wave {
+    display: block;
 
     >span {
-        color: pink;
         opacity: 0;
-        transition-duration: 0.5s;
         display: inline-block;
-    }
+        transform: translate3d(0, 100%, -100px);
+        transition: transform 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28), opacity 0.3s linear;
 
-    &.wave-up {
-        >span {
-            transform: translateY(100%);
-        }
-    }
-
-    &.wave-fall-down {
-        >span {
-            transform: translateY(-100px);
-            transition-duration: 0.05s;
+        @for $i from 0 to 100 {
+            &:nth-child(#{$i + 1}) {
+                transition-delay: #{$i*0.05}s;
+            }
         }
     }
 
     &.animated {
         >span {
-            color: deeppink;
             opacity: 1;
-            transform: translateY(0);
+            transform: translate3d(0, 0, 0);
         }
     }
 }
