--- a/Game_FlipImage/css/styled.scss
+++ b/Game_FlipImage/css/styled.scss
@@ -24,6 +24,10 @@ body {
     padding: 20px 10px 10px;
     background-color: $c_dark;
     overflow: hidden;
+
+    @media only screen and (max-width: 1023px) {
+        font-size: 14px;
+    }
 }
 
 
@@ -70,6 +74,15 @@ body {
     @media only screen and (min-width: 1024px) {
         padding: 10px;
     }
+
+    @media only screen and (max-width: 1023px) {
+        &::after {
+
+            font-size: 16px;
+            white-space: nowrap;
+        }
+    }
+
 }
 
 .point {
@@ -205,6 +218,13 @@ body {
         max-width: 1024px;
         margin: 0 auto;
         margin-top: 40px;
+    }
+
+    @media only screen and (max-width: 1023px) {
+        .mode {
+            max-width: calc(25% - 8px);
+            margin-top: 8px;
+        }
     }
 }
 
