--- a/Game_FlipCard2/css/styled.css
+++ b/Game_FlipCard2/css/styled.css
@@ -1,63 +1,37 @@
-*,
-::after,
-::before {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  line-height: 1.15;
-  font-family: "Courier New", Courier, monospace;
-}
-
 body {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  padding: 20px 10px 10px;
   background-color: #333;
-  overflow: hidden;
 }
 
 #root {
-  width: 100%;
+  width: 100;
   height: 100%;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  padding: 60px 6px 6px;
   position: relative;
 }
-#root::after {
+#root::before {
   content: "Flip Card";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 14px;
+  padding-left: 4px;
   color: #fff;
-  padding: 4px 16px;
-  background-color: #333;
-  border: 1px solid #fff;
-  border-radius: 50px;
-  transform: translate(-50%, -50%);
 }
-@media only screen and (min-width: 1024px) {
-  #root {
-    padding: 10px;
-  }
+
+.screen {
+  width: 1200px;
+  padding: 40px 10px;
+  border: 1px solid #aaa;
+  border-radius: 6px;
+  margin: 0 auto;
 }
 
 .cards {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .cards .card {
-  width: 100%;
-  max-width: calc(10% - 10px);
-  min-height: 60px;
+  width: 110px;
+  min-height: 110px;
   border-radius: 4px;
   border: 1px solid #fff;
-  margin: 5px;
   cursor: pointer;
 }
 
