--- a/Game_FlipCard2/css/styled.scss
+++ b/Game_FlipCard2/css/styled.scss
@@ -1,30 +1,6 @@
 @charset 'UTF-8';
 
-
-*,
-::after,
-::before {
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    line-height: 1.15;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-
 @import './_par/var';
-
-
-body {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    padding: 20px 10px 10px;
-    background-color: $c_dark;
-    overflow: hidden;
-}
 
 
 %box {
@@ -42,47 +18,41 @@ body {
     transition: all 0.3s ease;
 }
 
+body {
+    background-color: $c_dark;
+}
+
 #root {
-    width: 100%;
+    width: 100;
     height: 100%;
-    border: 1px solid $c_white;
-    border-radius: $radius;
-    padding: 60px 6px 6px;
     position: relative;
 
-    &::after {
+    &::before {
         content: 'Flip Card';
-        position: absolute;
-        top: 0;
-        left: 50%;
-
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 14px;
+        padding-left: 4px;
         color: $c_white;
-        padding: 4px 16px;
-        background-color: $c_dark;
-
-        border: 1px solid $c_white;
-        border-radius: $radius50;
-        transform: translate(-50%, -50%);
     }
+}
 
-    @media only screen and (min-width: 1024px) {
-        padding: 10px;
-    }
+.screen {
+    width: 1200px;
+    padding: 40px 10px;
+    border: 1px solid $color;
+    border-radius: 6px;
+    margin: 0 auto;
 }
 
 .cards {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 
     .card {
-        width: 100%;
-        max-width: calc(10% - 10px);
-        min-height: 60px;
+        width: 110px;
+        min-height: 110px;
         border-radius: $radius;
         border: 1px solid $c_white;
-        margin: 5px;
         cursor: pointer;
     }
 }
